add initial description and namespace file

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,16 @@
 Package: phsshinyextras
-Title: What the Package Does (One Line, Title Case)
+Title: Function bundle for PHS Shiny Dashboards
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+    person("Ruben", "Vine", , "ruben.vine@phs.scot", role = c("aut", "cre"))
+Description: This package contains multiple functions. 
+              There's a range of generic chart functions to keep formatting consistent.
+              There's a generic, downloadable data table.
+              There are various data processing functions too (removing SPSS labels, applying suppression).
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
+Depends: 
+    R (>= 2.10)
+LazyData: true
